# voice_cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  ISSUES.md  PLAN-CONFIG-CONSOLIDATION.md  PLAN.md  PRD-Phase1-10.md  PRD.md  README.md  ai-todo.md  config.example.json  config.example.jsonc  index.ts  package.json  progress.txt  test_bind.ts  tsconfig.json
.github/workflows/: test.yml
.ralphy/: config.yaml
docs/: API.md  ARCHITECTURE.md  AUDIO_DEVICES.md  CLI_COMMANDS.md  CONFIGURATION.md  EXAMPLES.md  EXIT_CODES.md  STT_FLOW.md  TROUBLESHOOTING.md  USAGE.md  VISUALIZATION.md  WAYLAND.md  merge_features.md
mockup/: README.md
mockup/electron-overlay/: README.md  hyprland-rules.conf  package.json  tsconfig.json
overlay/: Cargo.toml  README.md  build.sh  hyprland-rules.conf  package.json  tsconfig.json  vite.config.ts
overlay/src/: ipc-client.ts  ipc.rs  main.rs  main.ts  preload.ts  render.rs  waveform.rs  window.rs
overlay/src/renderer/: App.tsx  LiveWaveform.tsx  index.html  useDaemonState.ts
scripts/examples/: full-workflow.ts  list-microphones.ts  parallel-transcription.ts  simple-transcription.ts
src/audio/: amplitude.ts  converter.ts  device-service.ts  recorder.ts
src/cli/: boost.ts  config.ts  errors.ts  health.ts  (+4 more)
tests/: api_validation.test.ts  audio-detection.test.ts  boost_words_validator.test.ts  clipboard.test.ts  clipboard_integration.test.ts  config.test.ts  config_integration.test.ts  config_writer.test.ts  conflict.test.ts  daemon.test.ts  daemon_state.test.ts  hotkey.test.ts  hotkey_validation.test.ts  notification.test.ts  retry.test.ts
(+59 files in other folders)
