[package]
name = "voice-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
layershellev = "0.14"
tiny-skia = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1.0"
libc = "0.2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
